--- a/hooks/build
+++ b/hooks/build
@@ -5,7 +5,7 @@ echo "🔵 build"
 source hooks/.config
 
 if [ $DOCKER_TAG != "latest" ]; then
-  HATH_VERSION=$DOCKER_TAG
+  hath_version=$DOCKER_TAG
 fi
 
 for arch in ${build_architectures[@]}; do
@@ -14,7 +14,7 @@ for arch in ${build_architectures[@]}; do
 
   BASE_IMAGE_PREFIX="${base_image_prefix_map[${arch}]}"
   docker build \
-    --build-arg HATH_VERSION=${HATH_VERSION}
+    --build-arg HATH_VERSION=${hath_version}
     --build-arg BASE_IMAGE_PREFIX=${BASE_IMAGE_PREFIX} \
     --build-arg ARCH=${arch} \
     --file $DOCKERFILE_PATH \
