--- a/hooks/.config
+++ b/hooks/.config
@@ -15,3 +15,5 @@ declare -A docker_to_manifest_map=( ["aarch64"]="arm64" ["arm"]="arm" ["amd64"]=
 build_architectures=(amd64 aarch64 arm)
 
 docker -v
+
+hath_version=1.4.2
