--- a/.github/workflows/docker-hub-build-and-push.yml
+++ b/.github/workflows/docker-hub-build-and-push.yml
@@ -26,4 +26,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: frosty5689/hath:latest, frosty5689/hath:1.6.2
+          tags: frosty5689/hath:1.6.2, frosty5689/hath:latest
