--- a/.github/workflows/docker-hub-build-and-push.yml
+++ b/.github/workflows/docker-hub-build-and-push.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "master"
+env:
+  HATH_VERSION: 1.6.2
 
 jobs:
   docker:
@@ -26,4 +28,5 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: frosty5689/hath:1.6.2, frosty5689/hath:latest
+          tags: frosty5689/hath:$HATH_VERSION, frosty5689/hath:latest
+          build-args: HATH_VERSION=$HATH_VERSION
